--- a/style.css
+++ b/style.css
@@ -1,8 +1,50 @@
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Macondo&family=Rubik+Distressed&display=swap');
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-h1 {
-    color: red;
+body {
+    height: 100vh;
+    background-color: hsl(36, 60%, 95%);
+    font-family: 'Macondo';
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1rem;
+    background-color: cadetblue;
+    border: 2px solid black;
+}
+header ul {
+    display: flex;
+    gap: 1.5rem;
+    align-items: center;
+}
+header ul li {
+    list-style: none;
+}
+/* about section */
+.about-section {
+    display: flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    margin: 3rem auto;
+}
+.about-section h3 {
+    text-align: center;
+    text-decoration: underline;
+}
+
+.about-section ul li {
+    list-style: none;
+    padding: 1rem 5rem 1rem 0rem;
+    text-align: left;
+}
+/* hobbies and skills borders */
+.hobbies, .skills {
+    border: 1px solid black;
+    padding: 5rem;
+    padding-left: 1.5rem;
+    background-color: cadetblue;
 }
