--- a/style.css
+++ b/style.css
@@ -4,7 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+a {
+    text-decoration: none;
+   /* margin-top: 5rem; */
+}
 body {
     height: 100vh;
     background-color: hsl(36, 60%, 95%);
@@ -29,8 +32,17 @@ header ul li {
 .about-section {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
     /* align-items: center; */
     margin: 3rem auto;
+}
+h2 {
+    text-align: center;
+    padding: 30px 0px 0px;
+    text-decoration: underline;
+}
+h2 ~p {
+     padding: 10px 20px;
 }
 .about-section h3 {
     text-align: center;
@@ -39,13 +51,39 @@ header ul li {
 
 .about-section ul li {
     list-style: none;
-    padding: 1rem 5rem 1rem 0rem;
+    padding: 1rem 5rem 1rem 1rem;
     text-align: left;
 }
 /* hobbies and skills borders */
 .hobbies, .skills {
     border: 1px solid black;
-    padding: 5rem;
+    border-radius: 10px;
+    min-height: 335px;
+    min-width: 250px;
+    background-color: cadetblue;
+}
+.projects h2 {
+    margin: 5rem 0;
+}
+.project-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.project-1, .project-2, .project-3 {
+    border: 1px solid black;
+    min-height: 335px;
+    min-width: 250px;
+    margin: 3rem;
     padding-left: 1.5rem;
     background-color: cadetblue;
+}
+.project-container h4 {
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 1rem;
+}
+@media screen and (max-width: 768px) {
+    
+    
 }
