--- a/style.css
+++ b/style.css
@@ -84,10 +84,10 @@ h2 ~p {
     padding: 1rem;
 }
 footer {
-    text-align: center;
     border: 1px solid black;
     background-color: cadetblue;
     margin-bottom: 2.5rem;
+    margin: 0px 4.5rem;
 }
 footer h2 {
     margin-bottom: 1.5rem;
